--- a/style.css
+++ b/style.css
@@ -5,30 +5,30 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.preview-info {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.preview-info img {
   width: 100%;
 }
 
-.aaa .more-inf {
+.preview-info .more-info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
 
-  .aaa {
+  .preview-info {
     text-align: center;
   }
 
 }
 
-.centered-main-page-element {
+.main-block-app {
   display: block;
   width: 500px;
   margin: 0 auto 0;
