--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -12,11 +12,11 @@ body {
   text-align: right;
 }
 
-.preview-info img {
+.preview-img {
   width: 100%;
 }
 
-.preview-info .more-info {
+.more-info {
   font-family: fantasy, cursive;
 }
 
@@ -44,22 +44,23 @@ body {
   display: flex;
 }
 
-ul {
+#incomplete-tasks,
+#complete-tasks {
   margin: 0;
   padding: 0px;
 }
 
-li,
-h3 {
+.li,
+.h3-info {
   list-style: none;
 }
 
-input,
-button {
+.input,
+.btn {
   outline: none;
 }
 
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -69,13 +70,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.h3-info,
+.label[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +86,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.input[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,22 +99,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.input[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -122,51 +123,51 @@ li {
   align-items: center;
 }
 
-li > * {
+.li > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.li > .input[type="checkbox"] {
   margin: 0 10px;
 }
 
-li > label {
+.li > .label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li >  input[type="text"] {
+.li >  .input[type="text"] {
   width: 226px;
 }
 
-button.delete img {
+.delete .img-remove {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.delete .img-remove:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .label-task {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.li .input[type=text] {
   display: none;
 }
 
-ul li.edit-mode input[type=text] {
+.edit-mode .input[type=text] {
   display: inline-block;
   width:224px;
 }
 
-ul li.edit-mode label {
+.edit-mode .task {
   display: none;
 }
